--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
+  "dependencies": {
+    "modern-normalize": "^3.0.1"
+  },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
@@ -38,7 +41,12 @@
       "esbuild"
     ]
   },
-  "dependencies": {
-    "modern-normalize": "^3.0.1"
+  "overrides": {
+    "@sveltejs/kit": {
+      "cookie": "^0.7.0"
+    },
+    "@sveltejs/adapter-auto": {
+      "cookie": "^0.7.0"
+    }
   }
 }
