--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sveltejs/enhanced-img": "^0.4.4",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@types/node": "^22.14.0",
     "eslint": "^9.18.0",
     "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
