--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@lucide/svelte": "^0.487.0",
     "modern-normalize": "^3.0.1"
   },
   "devDependencies": {
