--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@lucide/svelte": "^0.487.0",
+    "clipboard-copy": "^4.0.1",
     "modern-normalize": "^3.0.1"
   },
   "devDependencies": {
