--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "polly-abstract-website",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
+  "packageManager": "pnpm@10.2.1",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -22,7 +23,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
     "@eslint/js": "^9.18.0",
-    "@sveltejs/adapter-auto": "^6.0.0",
+    "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/enhanced-img": "^0.4.4",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
